x-overflow fix test

--- a/client/src/static/index.css
+++ b/client/src/static/index.css
@@ -200,7 +200,7 @@ header button {
 #footer {
     overflow: hidden;
     color: white;
-    width: 100%;
+    width: inherit;
     display: block;
     margin: 0px;
     padding: 10px;
